# vSCAD

./: .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
demo/demo_distortions/: vscad.py
demo/demo_fractal_tree/: vscad.py
demo/demo_image_driven/: vscad.py
demo/demo_image_driven/image_data/: main.diam  main.pth  side.diam  side.pth
demo/demo_nodal_tree/: vscad.py
demo/demo_remeshing/: demo_remeshing_stl.py
docs/: Makefile  conf.py  demo.rst  demo_remeshing_stl.rst  index.rst  make.bat  module_tree.rst  modules.rst
docs/_build/doctrees/: demo.doctree  demo_fractal_tree.doctree  demo_image_driven.doctree  demo_nodal_tree.doctree  demo_remeshing_stl.doctree  environment.pickle  index.doctree  installation.doctree  module_geometry.doctree  module_tree.doctree  modules.doctree  toc_demo.doctree  toc_modules.doctree
docs/_build/html/: .buildinfo  demo.html  demo_fractal_tree.html  demo_image_driven.html  demo_nodal_tree.html  demo_remeshing_stl.html  genindex.html  index.html  installation.html  module_geometry.html  module_tree.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  toc_demo.html  toc_modules.html
docs/source/: conf.py  index.rst  toc_modules.rst
docs/source/demos/: demo_nodal_tree.rst
docs/source/modules/: module_io.rst  module_tree.rst
src/vSCAD/: __init__.py
src/vSCAD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vSCAD/Geometry/: geometry.py
src/vSCAD/Meshing/: __init__.py  remesh.py
tests/: __init__.py  test_vSCAD.py
(+38 files in other folders)
