[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vSCAD"
version = "0.1.0"
description = "Mesh generation code for lofting 2D images into 3D vessels using OpenSCAD."
readme = "README.rst"
authors = [
  {name = "njrovito", email = "niro3177@colorado.edu"}
]
maintainers = [
  {name = "njrovito", email = "niro3177@colorado.edu"}
]
classifiers = [

]
license = {text = "GNU GPL Version 2"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/njrovito/vSCAD/issues"
changelog = "https://github.com/njrovito/vSCAD/blob/master/changelog.md"
homepage = "https://github.com/njrovito/vSCAD"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

